--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 
 	   			<p class="intro-position">
 	   				<span>Software Quality Assurance Engineer</span>
+				        <span>Banglalink</span>
+
 	   				
 	   			</p>
 
