--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Md Emon Ali</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>May 3, 2000</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
+   					<span>SQA Engineer @Banglanink</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>unrealemon.github.io</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>emonali.w@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -162,24 +162,24 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>Manual Testing</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<strong>Web & Mobile Automation Testing</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<strong>API Testing</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>Performance Testing</strong>
 				   </li>
 				   <li>
 
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<strong>Database Testing & Version Control</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -232,12 +232,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>SQA Engineer</h3>
+	   					<p>March, 2015 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
+	   					<h4>BANGLALINK</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
@@ -250,12 +250,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Junior SQA Engineer</h3>
+	   					<p>August 2023 - February 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
+	   					<h4>SPONDON IT</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
@@ -268,12 +268,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Functional Testing Intern</h3>
+	   					<p>May 2023 - July 2023</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
+	   					<h4>A1QA</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
@@ -304,12 +304,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>BSc. Engg. Computer Science</h3>
+	   					<p>February 2019 - June 2023</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
+	   					<h4>Bangladesh University of Business & Technology</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
@@ -322,12 +322,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Higher Secondary School Certificate</h3>
+	   					<p>July 2016 - July 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
+	   					<h4>Govt. Science College</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
@@ -340,12 +340,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Secondary School Certificate</h3>
+	   					<p>April 2016</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
+	   					<h4>Mohammadpur Govt. High School & College</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
@@ -667,7 +667,7 @@
 
 	            <div class="service-content">	
 
-	            	 <h3>Webdesign</h3>
+	            	 <h3>Mobile & Web App Manual Testing</h3>
 
 		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	         		</p>
@@ -682,7 +682,7 @@
 
 	            <div class="service-content">	
 
-	            	<h3>Web Development</h3>  
+	            	<h3>Mobile & Web App Automation Testing</h3>  
 
 		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	         		</p>
@@ -697,7 +697,7 @@
 
 	            <div class="service-content">
 
-	            	<h3>Branding</h3>
+	            	<h3>API Testing</h3>
 
 		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	        			</p> 
@@ -712,7 +712,7 @@
 
 	            <div class="service-content">
 
-	            	<h3>UI/UX Design</h3>
+	            	<h3>Performance Testing</h3>
 
 		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	         		</p> 
@@ -727,7 +727,7 @@
 
 	            <div class="service-content">
 
-	            	<h3>Graphics Design</h3>
+	            	<h3>Database Testing</h3>
 
 		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	        			</p> 
@@ -742,7 +742,7 @@
 
 	            <div class="service-content">
 
-	            	 <h3>Consultancy</h3>
+	            	 <h3>User Acceptance Testing</h3>
 
 		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 	        			</p> 
@@ -774,7 +774,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							1500
+							100
 						</h3>
 
 						<h5 class="stat-title">
@@ -790,7 +790,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							900
+							500
 						</h3>
 
 						<h5 class="stat-title">
@@ -806,7 +806,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							200
+							35
 						</h3>
 
 						<h5 class="stat-title">
@@ -822,7 +822,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							120
+							200
 						</h3>
 
 						<h5 class="stat-title">
@@ -838,7 +838,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							1500
+							200
 						</h3>
 
 						<h5 class="stat-title">
@@ -944,9 +944,9 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+            PC Culture Housing, Shyamoli<br>
+            Mohammadpur, Dhaka<br>
+            1207 Bangladesh
             </p>
 
    		</div>
@@ -959,11 +959,9 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
-			   </p>
+   			<p>emonali.w@gmail.com</p>
 
-   		</div>
+   		        </div>
 
    		<div class="col-four tab-full">
 
@@ -973,10 +971,8 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
-			   </p>
+   			<p>Mobile: (+880) 1 99092 6360<br>
+			   	WhatsApp: (+880) 1 87641 9233</p>
 
    		</div>
    		
@@ -1005,9 +1001,8 @@
 
       	<div class="col-eight tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">themewagon</a></span>	         	
+		        	<span>© Copyright 2023 </span> 
+		        	<span>Design by <a href="http://www.styleshout.com/">Emon</a></span> 
 		         </div>		                  
 	      	</div>
 
