--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				   <li>
 
 				   	<div class="progress percent75"><span>95%</span></div>
-				   	<strong>Database Testing & Version Control</strong>
+				   	<strong>Database Testing</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -237,7 +237,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>BANGLALINK</h4>
+	   					<h4>Banglalink</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
@@ -255,7 +255,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>SPONDON IT</h4>
+	   					<h4>Spondon IT</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
@@ -273,7 +273,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>A1QA</h4>
+	   					<h4>A1qa</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
@@ -345,7 +345,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Mohammadpur Govt. High School & College</h4>
+	   					<h4>Mohammadpur Govt. High School</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
