--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
-	 <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"</i></a></li>
-	 <li><a href="t.me/unrealemon"><i class="fa-brands fa-telegram"></i></a></li>
-	 <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
+	 <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fab fa-snapchat"></i></a></li>
+	 <li><a href="t.me/unrealemon"><i class="fab fa-telegram"></i></a></li>
+	 <li><a href="https://www.instagram.com/unrealemon"><i class="fab fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -991,10 +991,10 @@
 
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
-                              <li><a href="https://www.linkedin.com/in/aliemon"><i class="fa-brands fa-linkedin"></i></a></li>
-	 		      <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa-brands fa-snapchat"></i></a></li>
-			      <li><a href="t.me/unrealemon"><i class="fa-brands fa-telegram"></i></a></li>
-			      <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
+                              <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
+	                      <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fab fa-snapchat"></i></a></li>
+	                      <li><a href="t.me/unrealemon"><i class="fab fa-telegram"></i></a></li>
+	                      <li><a href="https://www.instagram.com/unrealemon"><i class="fab fa-instagram"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
