--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <link rel="stylesheet" href="css/base.css">  
    <link rel="stylesheet" href="css/main.css">
    <link rel="stylesheet" href="css/vendor.css">     
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
    <!-- script
    ================================================== -->   
@@ -93,9 +94,9 @@
    	<ul class="intro-social">        
          <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
-	 <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fab fa-snapchat"></i></a></li>
-	 <li><a href="t.me/unrealemon"><i class="fab fa-telegram"></i></a></li>
-	 <li><a href="https://www.instagram.com/unrealemon"><i class="fab fa-instagram"></i></a></li>
+	 <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"></i></a></li>
+	 <li><a href="t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
+	 <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -992,9 +993,9 @@
      			<ul class="footer-social">        
 			      <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
                               <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
-	                      <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fab fa-snapchat"></i></a></li>
-	                      <li><a href="t.me/unrealemon"><i class="fab fa-telegram"></i></a></li>
-	                      <li><a href="https://www.instagram.com/unrealemon"><i class="fab fa-instagram"></i></a></li>
+	                      <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"></i></a></li>
+	                      <li><a href="t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
+	                      <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
