--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
          <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
          <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
 	 <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"></i></a></li>
-	 <li><a href="t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
+	 <li><a href="https://www.t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
 	 <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
@@ -994,7 +994,7 @@
 			      <li><a href="https://www.facebook.com/emon.ak23"><i class="fa fa-facebook"></i></a></li>
                               <li><a href="https://www.linkedin.com/in/aliemon"><i class='fa fa-linkedin-square'></i></a></li>
 	                      <li><a href="https://www.snapchat.com/add/unrealemonn"><i class="fa fa-snapchat"></i></a></li>
-	                      <li><a href="t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
+	                      <li><a href="https://www.t.me/unrealemon"><i class="fa fa-telegram"></i></a></li>
 	                      <li><a href="https://www.instagram.com/unrealemon"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
