--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>99%</span></div>
-				   	<strong>Web & Mobile Automation Testing</strong>
+				   	<strong>Automation Testing</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>96%</span></div>
