--- a/index.html
+++ b/index.html
@@ -162,15 +162,15 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>95%</span></div>
+				   	<div class="progress percent95"><span>95%</span></div>
 				   	<strong>Manual Testing</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>99%</span></div>
+				   	<div class="progress percent99"><span>99%</span></div>
 				   	<strong>Automation Testing</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>96%</span></div>
+				   	<div class="progress percent92"><span>92%</span></div>
 				   	<strong>API Testing</strong>
 				   </li>
 				   <li>
@@ -179,7 +179,7 @@
 				   </li>
 				   <li>
 
-				   	<div class="progress percent75"><span>95%</span></div>
+				   	<div class="progress percent95"><span>95%</span></div>
 				   	<strong>Database Testing</strong>
 				   </li>
       
@@ -191,7 +191,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href=""mailto:emonali.w@gmail.com.com"" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+   			<a href="mailto:emonali.w@gmail.com.com" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
    			<a href="https://drive.google.com/file/d/1buFAmKpKjgKAllrn5jMNvL3GRQLCCCxA/view" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
