--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="mailto:emonali.w@gmail.com.com" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+   			<a href="mailto:emonali.w@gmail.com" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
    			<a href="https://drive.google.com/file/d/1buFAmKpKjgKAllrn5jMNvL3GRQLCCCxA/view" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
