--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a href="#" title="">Beta 1.0</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -495,7 +495,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -515,7 +515,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -535,7 +535,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -555,7 +555,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -575,7 +575,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -595,7 +595,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -615,7 +615,7 @@
 
 
 	<!-- CTA Section
-   ================================================== -->
+   ================================================== 
 	<section id="cta" class="grey-section">
 
    	<div class="row cta-content">
@@ -627,7 +627,7 @@
 		      <p class="lead">
 		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
 				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
+				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order.	
 				</p>
 
 				<div class="action">
@@ -636,7 +636,7 @@
 
    		</div>
 
-   	</div> <!-- /cta-content -->
+   	</div> <!-- /cta-content 
 
    </section> <!-- /cta --> 
 
@@ -1003,7 +1003,7 @@
       	<div class="col-eight tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2023 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">Emon</a></span> 
+		        	<span>Design by <a href="#about">Emon</a></span> 
 		         </div>		                  
 	      	</div>
 
