--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
 	      		
 	      </div>
 
-      	<div class="col-eight tab-full">
+      	<div class="col-six tab-full">
 	      	<div class="copyright">
 		        	<span>© Copyright 2023 </span> 
 		        	<span>Design by <a href="#about">Emon</a></span> 
