--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
    ================================================== -->   
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
-
+        <script>document.getElementById('sendEmailButton').addEventListener('click', function()
+	{ window.location.href = "mailto:example@example.com?";
+          });</script>
    <!-- favicons
 	================================================== -->
 	<link rel="icon" type="image/png" href="favicon.png">
@@ -51,7 +53,7 @@
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
 						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="https://drive.google.com/file/d/1buFAmKpKjgKAllrn5jMNvL3GRQLCCCxA/view" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
@@ -191,7 +193,9 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="mailto:emonali.w@gmail.com" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+   			
+
+                        <a href="mailto:emonali.w@gmail.com" title="Hire Me" class="button stroke smoothscroll" button="" id="sendEmailButton">Send me a Mail</a>
    			<a href="https://drive.google.com/file/d/1buFAmKpKjgKAllrn5jMNvL3GRQLCCCxA/view" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
