--- a/index.html
+++ b/index.html
@@ -191,13 +191,13 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="mailto:emonali.w@gmail.com" title="Hire Me" class="button stroke smoothscroll" id="sendEmailButton">Hire Me</a>
+   			<a href="mailto:emonali.w@gmail.com" title="Hire Me" class="button stroke smoothscroll" id="sendEmailButton">Send me a Mail</a>
    			<a href="https://drive.google.com/file/d/1buFAmKpKjgKAllrn5jMNvL3GRQLCCCxA/view" title="Download CV" class="button button-primary">Download CV</a>
    		</div>
         <script>
         document.getElementById('sendEmailButton').addEventListener('click', function(event) {
             event.preventDefault();  // Prevent the default link behavior
-            window.location.href = "mailto:emonali.w@gmail.com?subject=Job Opportunity&body=Hello, I would like to discuss a job opportunity with you.";
+            window.location.href = "mailto:emonali.w@gmail.com?subject=Job Opportunity&body=Hello,.";
         });
     </script>   		
    	</div>
