--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
+   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
 
    			<ul class="info-list">
    				<li>
@@ -157,6 +158,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
+   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -213,6 +215,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
+   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -314,6 +317,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Bangladesh University of Business & Technology</h4>
+	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -331,6 +335,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Govt. Science College</h4>
+	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -348,6 +353,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Mohammadpur Govt. High School</h4>
+	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -369,8 +375,9 @@
    		<div class="col-twelve">
 
    			<h5>Portfolio</h5>
-   			<h1>Some of my projects I worked on.</h1>
+   			<h1>Check Out Some of My Works.</h1>
 
+   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -385,7 +392,7 @@
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
-	                  <a href="https://banglalink.net/en" class="overlay">	                  	           
+	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 		     					       <h3 class="folio-title">Liberty</h3>	     					    
@@ -401,7 +408,7 @@
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
-	               	<a href="https://toffeelive.com/en" class="overlay">              		                  
+	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
@@ -417,7 +424,7 @@
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
-	                  <a href="https://aorabooks.com/" class="overlay">             		                  
+	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Clouds</h3>	     					    
@@ -652,7 +659,7 @@
    			<h5>Services</h5>
    			<h1>What Can I Do For You?</h1>
 
-   			<p class="lead">Reach me out for the below digital services.</p>
+   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div>   		
    	</div> <!-- /section-intro -->
@@ -881,6 +888,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
+   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
    		</div> 
    	</div> <!-- /section-intro -->
