--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent100"><span></span></div>
+				   	<div class="progress percent100"></div>
 				   	<strong>Manual Testing</strong>
 				   </li>
 				   <li>
