--- a/index.html
+++ b/index.html
@@ -165,20 +165,20 @@
 				   	<strong>Manual Testing</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent99"><span>99%</span></div>
+				   	<div class="progress percent100"></div>
 				   	<strong>Automation Testing</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent92"><span>92%</span></div>
+				   	<div class="progress percent100"></div>
 				   	<strong>API Testing</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent100"></div>
 				   	<strong>Performance Testing</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent100"></div>
 				   	<strong>Database Testing</strong>
 				   </li>
       
