Changed some portfolio items

--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">Banglalink</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  Telco Web & Mobile App
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -408,9 +408,9 @@
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">Toffee</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Live Streaming Web & Mobile App
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -424,9 +424,9 @@
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Infix LMS</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  CMS Learning Website & Mobile App
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -440,9 +440,9 @@
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Aorabooks</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  SAAS Accounting Website & Mobile App
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -456,9 +456,9 @@
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Amazcart</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  CMS E-commerce Website and Mobile app
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -472,9 +472,9 @@
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Infix Edu</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  CMS Education Website & Mobile app
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
